modify css, html

--- a/project/board/templates/board/post_new.html
+++ b/project/board/templates/board/post_new.html
@@ -75,7 +75,7 @@
               <div onclick="photoClick()">
                 <img src="{% static 'svg/pic-gif.svg' %}">
               </div>
-              <input type="file" accept="image/*" name="images" multiple id="image_field">
+              <input type="file" accept=".png, .jpg, .jpeg, .gif" name="images" multiple id="image_field">
             </div>
             <div class="form__bottom__right">
               <div class="post__checkbox__wrapper">
