--- a/project/board/static/board/css/board_post/board_post_mobile.css
+++ b/project/board/static/board/css/board_post/board_post_mobile.css
@@ -279,6 +279,10 @@
     margin-right: 0.6rem;
 }
 
+.post__bottom__comment > img {
+    margin-right: 0.5rem;
+}
+
 .post__bottom__right {
     width: 150px;
     display: flex;
