--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -64,6 +64,7 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/sendbird@3.0.105/SendBird.min.js"></script>
+    <script src="{% static 'chat/js/env.js' %}"></script>
     <script src="{% static 'chat/js/API.js' %}"></script>
     <script src="{% static 'chat/js/chatUtil.js' %}"></script>
     {% block javascript %}
