modify category-create submit button, category-plus button

--- a/project/board/static/board/css/board_post/board_post_mobile.css
+++ b/project/board/static/board/css/board_post/board_post_mobile.css
@@ -475,6 +475,15 @@
     color: white;
 }
 
+
+#top__category__face__drop__plus {
+    background-color: #55b8bd;
+}
+
+#top__category__face__drop__plus img {
+    width: 15px;
+}
+
 #m_category_drop {
     margin-top:1%;
     height: 20px;
