--- a/project/board/templates/board/category_new.html
+++ b/project/board/templates/board/category_new.html
@@ -80,7 +80,7 @@
             </div>
             <div class="category__form__button">
               <button type="submit" class="reset-button">
-                <img src="{% static 'svg/send message.svg' %}" alt="">
+                Submit
               </button>
             </div>
           </form>
