--- a/project/board/static/board/css/report_css.css
+++ b/project/board/static/board/css/report_css.css
@@ -27,10 +27,26 @@
     padding: 30px 0;
     background-color: white;
 }
-/* 
-#on-report-modal {
+
+#report-from__close {
+    width: 100%;
+    margin-left: 40px;
+    margin-bottom: 15px;
+}
+
+#report-from__close > img {
+    cursor: pointer;
+    width: 20px;
+}
+
+.report-radio__list {
+    width: 100%;
+    padding: 10px 0px;
     display: flex;
-} */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .report-radio__wrap {
     width: 50%;
