--- a/project/accounts/static/accounts/css/signup_form.css
+++ b/project/accounts/static/accounts/css/signup_form.css
@@ -1,10 +1,11 @@
 .flex-container {
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
 }
 
 .signup__white-wrapper {
-    width: 80%;
+    width: 100%;
     height: fit-content;
     padding: 3rem 0;
     margin-top: auto;
@@ -136,4 +137,10 @@ label[for="male"] {
     color: red;
     font-weight: 100;
     font-size: 0.8rem;
+}
+
+@media (max-width: 768px) {
+    .accounts__form-tag {
+        width: 75%;
+    }
 }
