--- a/project/board/static/board/css/post_detail.css
+++ b/project/board/static/board/css/post_detail.css
@@ -25,7 +25,7 @@
 
 .detail__wrapper {
   margin-top: 2.5rem;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   border-radius: 10px;
   border: 1px solid #e3e3e3;
   background-color: white;
@@ -391,7 +391,7 @@
   border: 1px solid #e3e3e3;
   border-radius: 6px;
   padding: 5px 15px;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -404,13 +404,13 @@
 
 .comment__like > .like > img {
   width: 20px;
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 .comment__comment {
   border-left: 1px solid #e3e3e3;
-  margin-left: 10px;
-  padding-left: 10px;
+  border-right: 1px solid #e3e3e3;
+  padding: 0 10px;
   height: 100%;
   color: #cecece;
   font-weight: 400;
@@ -420,6 +420,20 @@
   color: black;
 }
 
+.comment_delete {
+  width: 18px;
+}
+
+.comment__report {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.comment__report > img {
+  width: 18px;
+}
+
 .comment__bottom {
   font-family: YDIYGO320;
   margin-top: 10px;
@@ -427,7 +441,15 @@
 }
 
 .nest_comment__top__right {
-  width: 80px;
+  width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nest_comment__top__right > .comment__like {
+  border-right: 1px solid #e3e3e3;
+  padding-right: 15px;
 }
 
 
@@ -541,12 +563,21 @@
     margin-left: 5px;
   }
 
-  .nest_comment__top__right {
-    width: 60px;
+  .comment_delete {
+    width: 15px;
   }
 
-  .nest_comment__top__right img {
-    margin-right: 8px !important;
+  .comment__report > img {
+    width: 15px;
+  }
+
+
+  .nest_comment__top__right {
+    width: 100px;
+  }
+
+  .nest_comment__top__right > .comment__like img {
+    margin-right: 9px !important;
   }
 
   .comment__bottom {
