--- a/project/board/static/board/css/board_header/board_header_mobile.css
+++ b/project/board/static/board/css/board_header/board_header_mobile.css
@@ -8,7 +8,7 @@
 }
 
 .base__header__used-space {
-    padding-right: 15px;
+    padding-right: 10px;
     padding-left: 15px;
 }
 
@@ -26,7 +26,7 @@
 .board__buttons {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     list-style: none;
     width:100%;
 }
@@ -34,6 +34,10 @@
 .board__buttons img{
     height: 25px;
     width: 90%;
+}
+
+.board__buttons a:first-child {
+    margin-right: 10%
 }
 
 #h__post {
@@ -87,7 +91,7 @@
 }
 
 .header__logo img {
-    height: 30px;
+    height: 26px;
 }
 
 .header__dropdown {
@@ -121,6 +125,7 @@
 .header__logo {
     display: flex;
     justify-content: center;
+    padding-right: 15px;
     width: 40%;
 }
 
