--- a/project/core/static/base/css/header.css
+++ b/project/core/static/base/css/header.css
@@ -7,6 +7,7 @@
     height: 4rem;
     background-color: var(--main-color);
     margin-bottom: 1rem;
+    position: -webkit-sticky;
     position: sticky;
     z-index: 2;
     top: 0px;
