--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -264,7 +264,7 @@
                       </form>
                     {% else %}
                       <div class="comment__report">
-                        <img src="{% static 'svg/report.svg' %}" alt="">
+                        <img src="{% static 'svg/report.svg' %}" alt="" onclick="reportComment({{ comment.pk }})>
                       </div>
                     {% endif %}
                   </div>
@@ -312,7 +312,7 @@
                           </div>
                         {% else %}
                           <div class="comment__report">
-                            <img src="{% static 'svg/report.svg' %}" alt="">
+                            <img src="{% static 'svg/report.svg' %}" alt="" onclick="reportComment({{ comment.pk }})>
                           </div>
                         {% endif %}
                       </div>
@@ -693,6 +693,12 @@
     function getComment (commentPK) {
         comment_abuse = commentPK;
         is_comment = 1;
+    }
+
+    function reportComment(commentPK){
+        comment_abuse = commentPK;
+        is_comment = 1;
+        reportModal.style.display = 'flex';
     }
 
     // 신고하기 버튼 (포스트)
