따옴표를 빼먹엇네 ;

--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -264,7 +264,7 @@
                       </form>
                     {% else %}
                       <div class="comment__report">
-                        <img src="{% static 'svg/report.svg' %}" alt="" onclick="reportComment({{ comment.pk }})>
+                        <img src="{% static 'svg/report.svg' %}" alt="" onclick="reportComment({{ comment.pk }})">
                       </div>
                     {% endif %}
                   </div>
@@ -312,7 +312,7 @@
                           </div>
                         {% else %}
                           <div class="comment__report">
-                            <img src="{% static 'svg/report.svg' %}" alt="" onclick="reportComment({{ comment.pk }})>
+                            <img src="{% static 'svg/report.svg' %}" alt="" onclick="reportComment({{ comment.pk }})">
                           </div>
                         {% endif %}
                       </div>
