modify css / add meta image

--- a/project/accounts/templates/registration/login.html
+++ b/project/accounts/templates/registration/login.html
@@ -80,7 +80,7 @@
 
               if(req.status === 200) {
                 btn.innerHTML = "Next";
-                alert("Check your email!")
+                alert("Please check your Email. Verification mail was sent to your school mail successfully! Click \"Verify my email\"")
               } else {
                 btn.innerHTML = "Next";
                 alert(req.responseText);
