--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -10,6 +10,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:image" content="{% static 'images/logo.png' %}"/>
     <link rel="stylesheet" href="{% static "base/css/base.css" %}" type="text/css">
     <link rel="stylesheet" media="(min-width:768px)" href="{% static "board/css/board_header/board_header_small.css" %}" type="text/css">
     <link rel="stylesheet" media="(min-width:992px)" href="{% static "board/css/board_header/board_header_medium.css" %}" type="text/css">
