--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -10,6 +10,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:image" content="{% static 'images/logo.png' %}"/>
     <link rel="stylesheet" href="{% static "base/css/base.css" %}" type="text/css">
     <title>{% firstof html_title "MY CAMPUS" %}</title>
     <script src="https://kit.fontawesome.com/6b942254ad.js"></script>
