--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -91,7 +91,7 @@
     const back = document.getElementById('back');
 
     let flag = 'norm'
-
+    console.log("{{user.is_staff}}")
     chat_back.onclick = () => {
         if (chat_a.style.display == 'none'){
             chat_a.style.display = 'block';
@@ -147,7 +147,7 @@
 
     chat_text_btn.addEventListener('click', async (e) => {
         let msg = chat_text.value
-        if (sb.currentUser.userId == env.ADMID && chat_text.value.split('/').length > 1 && chat_text.value.split('/')[0] == "invite"){
+        if ("{{user.is_staff}}" == "True" && chat_text.value.split('/').length > 1 && chat_text.value.split('/')[0] == "invite"){
             const user = chat_text.value.split('/')[1]
             msg = `<form action="" method="get"><input type="hidden" name="match" value="${user}"><input type="submit" value="match"></form>`
         }
@@ -197,7 +197,7 @@
 
     chat_text_btn_m.addEventListener('click', async (e) => {
         let msg = chat_text_m.value
-        if (sb.currentUser.userId == env.ADMID && chat_text_m.value.split('/').length > 1 && chat_text_m.value.split('/')[0] == "invite"){
+        if ("{{user.is_staff}}" == "True" && chat_text_m.value.split('/').length > 1 && chat_text_m.value.split('/')[0] == "invite"){
             const user = chat_text_m.value.split('/')[1]
             msg = `<form action="" method="get"><input type="hidden" name="match" value="${user}"><input type="submit" value="match"></form>`
         }
