dropdown height 수정

--- a/project/board/static/board/css/board_post/board_post_mobile.css
+++ b/project/board/static/board/css/board_post/board_post_mobile.css
@@ -462,9 +462,10 @@
     align-items: center;
     justify-content: center;
     color: white;
-    height: 1.5rem;
+    height: 1.7rem;
     border-radius: 3px;
     margin: 5px 0;
+    cursor: pointer;
 }
 
 .top__category__face__drop a{
