--- a/project/chat/static/chat/css/index.css
+++ b/project/chat/static/chat/css/index.css
@@ -26,9 +26,11 @@ hr{
 
 #chat-list-container{
     background-color: #ffffff;
-    border-radius: 12px 12px 0 0;
+    border-radius: 12px 12px 12px 12px;
     width : 40%;
     justify-content: center;
+    margin-bottom: 1rem;
+
 }
 
 #chat-list-header {
