--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -42,7 +42,7 @@
 
     {% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/sendbird@3.0.105/SendBird.min.js"></script>
+    <script src="{% static 'lib/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'chat/js/API.js' %}"></script>
     <script src="{% static 'chat/js/chatUtil.js' %}"></script>
     {% block javascript %}
