--- a/project/board/static/board/css/notification.css
+++ b/project/board/static/board/css/notification.css
@@ -20,7 +20,8 @@
         border-right: none;
     }
 
-    .noti__main {
+    .noti__ul > li {
+        cursor: pointer;
     }
 
     .noti__each {
@@ -30,6 +31,7 @@
         justify-content: flex-start;
         margin: 5px 2rem;
         font-size: 0.8rem;
+        padding: 5px 0;
     }
 
     .noti__ul > hr {
@@ -70,7 +72,7 @@
 
 }
 
-@media(max-width : 768px ) {
+@media(max-width : 767px ) {
     .noti__container {
         background-color: white;
         padding: 0;
@@ -91,7 +93,8 @@
         border-right: none;
     }
 
-    .noti__main {
+    .noti__ul > li {
+        cursor: pointer;
     }
 
     .noti__each {
@@ -101,6 +104,7 @@
         justify-content: flex-start;
         margin: 10px 2rem;
         font-size: 0.8rem;
+        padding: 5px 0;
     }
 
     .noti__ul > hr {
