feat(analytics): 태그붙임

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -3,6 +3,13 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'http2s://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-M3Z2QN6');</script>
+    <!-- End Google Tag Manager -->
     <link rel="shortcut icon" type="image/png" href="{% static '/ico/box-logo.ico' %}"/>
     <meta name="theme-color" content="#4fbcbd" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#4fbcbd">
@@ -14,11 +21,34 @@
     <link rel="stylesheet" href="{% static "base/css/base.css" %}" type="text/css">
     <title>{% firstof html_title "MY CAMPUS" %}</title>
     <script src="https://kit.fontawesome.com/6b942254ad.js"></script>
+
     {% block css %}
     {% endblock %}
+    <!-- Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '472125396903829');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=472125396903829&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
+
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M3Z2QN6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="base__header pc__header">
         <div class="base__header__used-space container">
         {% if univ.logo %}
