setting, signup email

--- a/project/accounts/templates/accounts/mail.html
+++ b/project/accounts/templates/accounts/mail.html
@@ -7,12 +7,10 @@
         </div>
     </div>
     <div class="mail__message">
-        <p>Please click on the link for using the anonymous community.
-        </p>
         <p>
-            The information used for verification is not matched to the information for using the service.
+            [Team MY CAMPUS]
+            Please click on the link provided below to start using MY CAMPUS.
         </p>
-        <p>No one can figure out what e-mail owner wrote, so Please feel free to use MY CAMPUS!!</p>
     </div>
     <div class="mail__validate-button">
         <a href="{{ url }}">
