--- a/project/board/templates/board/category_new.html
+++ b/project/board/templates/board/category_new.html
@@ -16,7 +16,7 @@
       <div class="header__wrap">
         <div class="header__main">
           <div class="header__ham" id="h_click">
-            <img src="{% static "/svg/햄버거.svg" %}" alt="">
+            <img src="{% static "/svg/ham-white.svg" %}" alt="">
           </div>
           <div class="header__logo">
             <a href="{% url 'core:board:main_board' url_name %}">
@@ -27,7 +27,7 @@
           <div class="board__header__right">
             <ul class="board__buttons">
               <a href="{% url 'core:chat:index' univ.url_name %}">
-                <li><img src="{% static "/svg/messege box.svg" %}"></li>
+                <li><img src="{% static "/svg/messege_box.svg" %}"></li>
               </a>
               <a href="{% url 'core:board:post_create' univ.url_name %}">
                 <li><img id="h__post" src="{% static "/svg/post.svg" %}"></li>
@@ -41,17 +41,17 @@
   <div class="header__dropdown mobile__header pd__drop" id="h_h" style="display: none;">
     <a href="{% url 'core:accounts:mypage' univ.url_name %}">
       <div class="header__drop__mypage">
-        <img src="{% static "/svg/마이페이지.svg" %}" alt="">My Page
+        <img src="{% static "/svg/mypage-green.svg" %}" alt="">My Page
       </div>
     </a>
     <div class="header__drop__notification"
-    onclick="location.href='{% url 'core:board:notification' univ.url_name %}'">
-      <img src="{% static "/svg/알림.svg" %}" alt="">Notification
+         onclick="location.href='{% url 'core:board:notification' univ.url_name %}'">
+      <img src="{% static "/svg/alarm-green.svg" %}" alt="">Notification
     </div>
     <div class="header__drop__search">
       <form action="" method="get">
         <button type="submit" value="search">
-          <img src="{% static "/svg/검색.svg" %}">
+          <img src="{% static "/svg/search-green.svg" %}">
         </button>
         <input type="text" placeholder="Search" name="search" value="{{ search }}">
       </form>
@@ -69,7 +69,8 @@
           </div>
         </div>
         <div class="category__form__bottom">
-          <form action="{% url 'core:board:category_create' url_name %}" method="post" enctype="multipart/form-data" class="category__form">
+          <form action="{% url 'core:board:category_create' url_name %}" method="post" enctype="multipart/form-data"
+                class="category__form">
             {% csrf_token %}
             <div class="category__form__name">
               <label for="id_name">Name</label>
@@ -93,6 +94,15 @@
 
 {% block javascript %}
   <script>
+    var drop = document.getElementById("h_h");
+
+    document.getElementById('h_click').onclick = () => {
+      if (drop.style.display == 'none') {
+        drop.style.display = 'flex';
+      } else {
+        drop.style.display = 'none';
+      }
+    };
   </script>
 
 {% endblock %}
