--- a/project/board/templates/board/category_success.html
+++ b/project/board/templates/board/category_success.html
@@ -27,7 +27,7 @@
           <div class="board__header__right">
             <ul class="board__buttons">
               <a href="{% url 'core:chat:index' univ.url_name %}">
-                <li><img src="{% static "/svg/messege box.svg" %}"></li>
+                <li><img src="{% static "/svg/messege_box.svg" %}"></li>
               </a>
               <a href="{% url 'core:board:post_create' univ.url_name %}">
                 <li><img id="h__post" src="{% static "/svg/post.svg" %}"></li>
