--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -7,7 +7,7 @@
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'http2s://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-M3Z2QN6');</script>
     <!-- End Google Tag Manager -->
     <link rel="shortcut icon" type="image/png" href="{% static '/ico/box-logo.ico' %}"/>
@@ -74,7 +74,7 @@
                     <ul class="board__buttons">
                           <li><img src="{% static "/svg/alarm.svg" %}" id="noti_button"></li>
                         <a href="{% url 'core:chat:index' univ.url_name %}">
-                            <li><img src="{% static "/svg/messege box.svg" %}"></li>
+                            <li><img src="{% static "/svg/messege_box.svg" %}"></li>
                         </a>
                         <a href="{% url 'core:accounts:mypage' univ.url_name %}">
                             <li><img src="{% static "/svg/mypage.svg" %}"></li>
